Added images and arrays

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "build" : "gulp && node create-json.js"
+    "build" : "gulp && node create-json.js && http-server dist"
 },
   "devDependencies": {
     "babel-core": "^6.0.0",
