--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-preset-es2015": "^6.6.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
-    "del": "^2.2.0",
+    "del": "^2.2.2",
     "extract-text-webpack-plugin": "*",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -71,7 +71,12 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "beautify-scrollbar": "^1.0.8",
     "directory-tree": "^2.1.0",
+    "glob": "^7.1.3",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "hash-files": "^1.1.1",
     "i": "^0.3.6",
+    "jsesc": "^2.5.1",
     "npm": "^6.4.1",
     "pimg": "^1.1.3",
     "v-lazy-image": "^1.2.2",
