--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,43 +1,43 @@
 {
-  "short_name": "Wallpapers",
-  "name": "Wallpapers",
+  "name": "iOs Wallpapers",
+  "short_name":"Wallpapers",
   "background_color": "#FFFFFF",
   "theme_color": "#24292E",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "./",
   "icons": [{
-      "src": "extra/16.png",
+      "src": "images/extra/16.png",
       "type": "image/png",
       "sizes": "16x16"
     },
     {
-      "src": "extra/32.png",
+      "src": "images/extra/32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "extra/144.png",
+      "src": "images/extra/144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "extra/152.png",
+      "src": "images/extra/152.png",
       "type": "image/png",
       "sizes": "152x152"
     },
     {
-      "src": "extra/192.png",
+      "src": "images/extra/192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "extra/196.png",
+      "src": "images/extra/196.png",
       "type": "image/png",
       "sizes": "196x196"
     },
     {
-      "src": "extra/512.png",
+      "src": "images/extra/512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
